# handy-local-rules

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  brief.md  clippy.toml  commitlint.config.js  commitlint.config.mjs  config.example.json  config.json  dev.a9g.handy-local-rules.plist  package.json  rules.json  rust-toolchain.toml  rustfmt.toml
.claude/: settings.json
.claude/commands/: release.md
.claude/hooks/: format.sh  lint.sh
.github/workflows/: ci.yml  release.yml
rules/de/: satzzeichen.README.md  satzzeichen.json  woerter.README.md  woerter.json  zahlen.README.md  zahlen.json
rules/dev-kommandos/: git.README.md  git.json
rules/general/: cleanup.README.md  cleanup.json
scripts/: set-version.sh
src/: config.rs  error.rs  handlers.rs  main.rs  server.rs
src/models/: mod.rs  request.rs  response.rs
src/rules/: engine.rs  loader.rs  mod.rs  types.rs
src/static/: index.html
