[package]
name = "handy-local-rules"
version = "0.0.1"
edition = "2024"
description = "Local rule-based text transformer with OpenAI-compatible API"
license = "MIT"
repository = "https://github.com/ahoendgen/handy-local-rules"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex
regex = "1"

# File watching
notify = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4", "v5"] }
anyhow = "1"
thiserror = "1"
glob = "0.3"

# OpenAPI / Swagger
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Home directory support
dirs = "6"

# HTTP client (for status check)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "handy-rules"
path = "src/main.rs"
